# covetability

./: .env.example  .gitignore  Makefile  index.html
pipeline/: README.md  alembic.ini  create_sqlite_db.py  pyproject.toml  run_daily.bat  run_weekly.bat  seed_catalog.py  sources.example.json
pipeline/alembic/: env.py
pipeline/alembic/versions/: 001_foundations.py  002_snapshot_runs.py  003_matching.py  004_aggregates.py  (+8 more)
pipeline/app/: __init__.py  contract.py  db.py  main.py  refresh_status.py  settings.py
pipeline/jobs/: __init__.py  apply_stability_decision.py  covet_digest.py  daily_aggregates.py  daily_score.py  daily_snapshot.py  evaluate_conditions.py  evaluate_matcher.py  expire_raw.py  load_fixture_gold.py  normalize_conditions.py  recompute_aggregates.py  refresh.py  reset_live.py  run_matching.py  seed_history.py  stability_report.py  verify_aggregates.py  verify_snapshot.py  weekly_trends.py
pipeline/seeds/: __init__.py  catalog.py  catalog_extra.py
pipeline/tests/: conftest.py  test_admin_api.py  test_aggregate_stats.py  test_catalog_admin.py  test_conditions.py  test_contract.py  test_daily_aggregates.py  test_daily_snapshot.py  test_ebay_client.py  test_editorial_vocabulary.py  test_expire_raw.py  test_fixture_source.py  test_ingestion_models.py  test_manual_evidence.py  test_matcher.py  test_matching_engine.py  test_normalize.py  test_observations.py  test_phase7_public_launch.py  test_phase8_publication.py  test_phash.py  test_public_api.py  test_relists.py  test_schema_constraints.py  test_score_api.py  test_score_components.py  test_score_compute.py  test_score_gates.py  test_score_stability.py  test_trends.py
(+193 files in other folders)
