[project]
name = "covetability-pipeline"
version = "0.1.0"
description = "FastAPI and data pipeline for Covetability."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "imagehash>=4.3",
    "pillow>=10",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

# pytrends is unofficial and fragile; kept optional so it can never block CI.
# Install with `uv sync --group trends` for live search collection.
trends = [
    "pytrends>=4.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
